dev/admin-server.yaml
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: admin-server
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: http
      nodePort: 30100
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  labels:
    app.kubernetes.io/name: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: admin-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: admin-server
    spec:
      containers:
        - name: admin-server
          image: "hongphuchcmus/spring-petclinic-admin-server:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          resources:
            {}
---
# Source: spring-petclinic-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "admin-server-test-connection"
  labels:
    helm.sh/chart: spring-petclinic-chart-0.1.0
    app.kubernetes.io/name: admin-server
    app.kubernetes.io/instance: admin-server
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['admin-server:9090']
  restartPolicy: Never
