dev/discovery-server.yaml
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: discovery-server
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
      name: http
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  labels:
    app.kubernetes.io/name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: discovery-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: "hongphuchcmus/spring-petclinic-discovery-server:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8761
              protocol: TCP
          resources:
            {}
---
# Source: spring-petclinic-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "discovery-server-test-connection"
  labels:
    helm.sh/chart: spring-petclinic-chart-0.1.0
    app.kubernetes.io/name: discovery-server
    app.kubernetes.io/instance: discovery-server
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['discovery-server:8761']
  restartPolicy: Never
