dev/vets-service.yaml
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vets-service
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: http
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  labels:
    app.kubernetes.io/name: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vets-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vets-service
    spec:
      containers:
        - name: vets-service
          image: "hongphuchcmus/spring-petclinic-vets-service:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          resources:
            {}
---
# Source: spring-petclinic-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "vets-service-test-connection"
  labels:
    helm.sh/chart: spring-petclinic-chart-0.1.0
    app.kubernetes.io/name: vets-service
    app.kubernetes.io/instance: vets-service
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['vets-service:8083']
  restartPolicy: Never
