dev/api-gateway.yaml
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
# Source: spring-petclinic-chart/templates/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: "hongphuchcmus/spring-petclinic-api-gateway:3d00e62"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
---
# Source: spring-petclinic-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  labels:
    app: api-gateway-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: spring-petclinic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
---
# Source: spring-petclinic-chart/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "api-gateway-test-connection"
  labels:
    helm.sh/chart: spring-petclinic-chart-0.1.0
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/instance: api-gateway
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['api-gateway:8080']
  restartPolicy: Never
